force-app/main/default/objects/Proposal_Form__c/Proposal_Form__c.object-meta.xml
<CustomObject>
    <label>Proposal Form</label>
    <nameField>
        <displayFormat>PF-{0000}</displayFormat>
        <label>Proposal Form Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Proposal Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>