force-app/main/default/objects/Proposal_Form__c/fields/Authorized_Signatory__c.field-meta.xml
<CustomField>
    <fullName>Authorized_Signatory__c</fullName>
    <label>Authorized Signatory</label>
    <length>255</length>
    <type>Text</type>
</CustomField>