force-app/main/default/objects/Proposal_Form__c/fields/Billing_Terms__c.field-meta.xml
<CustomField>
    <fullName>Billing_Terms__c</fullName>
    <label>Billing Terms</label>
    <length>255</length>
    <type>Text</type>
</CustomField>