force-app/main/default/objects/Proposal_Form__c/fields/CVs_of_Key_Medical_Personnel__c.field-meta.xml
<CustomField>
    <fullName>CVs_of_Key_Medical_Personnel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CVs of Key Medical Personnel</label>
    <type>Checkbox</type>
</CustomField>