force-app/main/default/objects/Proposal_Form__c/fields/Date_of_Proposal__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Proposal__c</fullName>
    <label>Date of Proposal</label>
    <type>Date</type>
</CustomField>