force-app/main/default/objects/Proposal_Form__c/fields/Facility_Photos_or_Accreditation__c.field-meta.xml
<CustomField>
    <fullName>Facility_Photos_or_Accreditation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Facility Photos or Accreditation</label>
    <type>Checkbox</type>
</CustomField>