force-app/main/default/objects/Proposal_Form__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Proposal Forms</relationshipLabel>
    <relationshipName>Proposal_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>