force-app/main/default/objects/Proposal_Form__c/fields/MoH_License_Copy__c.field-meta.xml
<CustomField>
    <fullName>MoH_License_Copy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MoH License Copy</label>
    <type>Checkbox</type>
</CustomField>