force-app/main/default/objects/Proposal_Form__c/fields/MoH_License_Number__c.field-meta.xml
<CustomField>
    <fullName>MoH_License_Number__c</fullName>
    <label>MoH License Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>