force-app/main/default/objects/Proposal_Form__c/fields/Other_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Other_Conditions__c</fullName>
    <label>Other Conditions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>