force-app/main/default/objects/Proposal_Form__c/fields/Point_of_Contact__c.field-meta.xml
<CustomField>
    <fullName>Point_of_Contact__c</fullName>
    <label>Point of Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>