force-app/main/default/objects/Proposal_Form__c/fields/Price_Justification_or_Benchmark__c.field-meta.xml
<CustomField>
    <fullName>Price_Justification_or_Benchmark__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Price Justification or Benchmark</label>
    <type>Checkbox</type>
</CustomField>