force-app/main/default/objects/Proposal_Form__c/fields/Proposed_Contract_Duration__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Contract_Duration__c</fullName>
    <label>Proposed Contract Duration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>