force-app/main/default/objects/Proposal_Form__c/fields/Service_Brochure__c.field-meta.xml
<CustomField>
    <fullName>Service_Brochure__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Service Brochure</label>
    <type>Checkbox</type>
</CustomField>