force-app/main/default/objects/Proposal_Form__c/fields/Service_Provider_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Provider_Name__c</fullName>
    <label>Service Provider Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>